--- a/static/index.html
+++ b/static/index.html
@@ -24,9 +24,6 @@
           display: flex;
           justify-content: center;
         }
-
-
-
     </style>
 </head>
 <body>
@@ -43,7 +40,7 @@
         <tr>
             <th>Code</th>
             <th>Long URL</th>
-            <th>Edit</th>
+            <th>Manage</th>
         </tr>
         </thead>
         <tbody>
@@ -51,7 +48,7 @@
             <td>Example</td>
             <td><a href="http://www.google.com">http://www.google.com</a></td>
             <td>
-                <button class="btn btn-success">Manage</button>
+                <button class="btn btn-success">Edit</button>
                 <button class="btn btn-danger">Delete</button>
             </td>
         </tr>
@@ -59,7 +56,7 @@
             <td>abFgZH1</td>
             <td><a href="http://www.google.com">http://www.google.com</a></td>
             <td>
-                <button class="btn btn-success">Manage</button>
+                <button class="btn btn-success">Edit</button>
                 <button class="btn btn-danger">Delete</button>
             </td>
         </tr>
