--- a/static/index.html
+++ b/static/index.html
@@ -1,51 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>idek.pw</title>
+    <title>URL Shortener</title>
 
-    <script src="https://code.jquery.com/jquery-2.2.3.min.js"
-            integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"
-          integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"
+          integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous"> -->
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
-            integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
-            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
     <!-- Our fonts :D -->
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,100' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
 
     <script src="/js/client.js"></script>
     <script src="/js/index.js"></script>
     <style>
         body {
-          font-family: 'Roboto', sans-serif;
-          background-color: #282C34;
-          color: #FFFFFF;
+            padding-top: 50px;
+            background-color: #ebebe0;
         }
-
+        #header {
+            font-family: 'Lobster Two', cursive;
+            font-size: 4.5em;
+        }
         .center {
-          display: flex;
-          justify-content: center;
+            display: flex;
+            justify-content: center;
         }
     </style>
 </head>
+
 <body>
-<div class="container">
-    <h2 class="text-center">idek.pw<span id="shortened"></span></h2>
-    <div id="errorHolder"></div>
-    <form class="center form-inline" id="shortenForm">
-        <input id="longUrl" class="form-control" style="width: 500px;" placeholder="Long URL..." type="url" required>
-        <input id="shorten" class="form-control btn btn-primary" value="Shorten" type="submit">
-    </form>
-</div>
+    <div class="container">
+        <h2 class="text-center" id="header">Shorten</h2>
+        <div id="errorHolder"></div>
+        <form class="center form-inline" id="shortenForm">
+            <div class="input-group">
+                <input id="longUrl" class="form-control" style="width: 500px;" placeholder="Long URL..." type="url" required>
+                <span class="input-group-btn">
+           <button id="shorten" class="btn btn-primary" type="submit">Shorten</button>
+         </span>
+            </div>
+        </form>
+
+        <div class="modal fade shortened-link" id="shortened-link" tabindex="-1" role="dialog" aria-labelledby="shortened-link">
+            <div class="modal-dialog modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Short Link:</h4>
+                    </div>
+                    <div class="modal-body">
+                        <input type="text" class="form-control" id="shortLinkBox" readonly>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-success" data-dismiss="modal">Got It!</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
